@@ -1,16 +1,64 @@
 import java.io.File.pathSeparator
 import scala.util.Try
-import scalanative.tools.OptimizerReporter
 import scalanative.sbtplugin.ScalaNativePluginInternal._
 import scalanative.io.packageNameFromPath
 
-val toolScalaVersion      = "2.10.6"
-val libScalaVersion       = "2.11.11"
-val libCrossScalaVersions = Seq("2.11.8", "2.11.11")
+val sbt13Version          = "0.13.18"
+val sbt13ScalaVersion     = "2.10.7"
+val sbt10Version          = "1.2.8"
+val sbt10ScalaVersion     = "2.12.8"
+val libScalaVersion       = "2.11.12"
+val libCrossScalaVersions = Seq("2.11.8", "2.11.11", libScalaVersion)
+
+// Convert "SomeName" to "some-name".
+def convertCamelKebab(name: String): String = {
+  name.replaceAll("([a-z])([A-Z]+)", "$1-$2").toLowerCase
+}
+
+// Generate project name from project id.
+def projectName(project: sbt.ResolvedProject): String = {
+  convertCamelKebab(project.id)
+}
+
+// Metals settings (next 3 items)
+// Avoid 2.10 for sbt generated root project
+scalaVersion := libScalaVersion
+
+lazy val startupTransition: State => State = { s: State =>
+  Option(System.getenv("METALS_ENABLED")) match {
+    case Some(sb) => if (sb == "true") s"^^$sbt10Version" :: s else s
+    case None     => s
+  }
+}
+
+onLoad in Global := {
+  val sbtCrossVersion = (sbtVersion in pluginCrossBuild).value
+  val old             = (onLoad in Global).value
+  if (sbtCrossVersion != sbt10Version) {
+    startupTransition compose old
+  } else {
+    old
+  }
+}
+
+// Provide consistent project name pattern.
+lazy val nameSettings = Seq(
+  normalizedName := projectName(thisProject.value), // Maven <artifactId>
+  name := s"Scala Native ${projectName(thisProject.value)}" // Maven <name>
+)
+
+// The previous releases of Scala Native with which this version is binary compatible.
+val binCompatVersions = Set()
+
+lazy val mimaSettings: Seq[Setting[_]] = Seq(
+  mimaPreviousArtifacts := binCompatVersions.map { version =>
+    organization.value %% moduleName.value % version
+  }
+)
 
 lazy val baseSettings = Seq(
-  organization := "org.scala-native",
-  version := nativeVersion
+  organization := "org.scala-native", // Maven <groupId>
+  version := nativeVersion // Maven <version>
 )
 
 addCommandAlias(
@@ -26,9 +74,10 @@ addCommandAlias(
 addCommandAlias(
   "dirty-rebuild",
   Seq(
-    "nscplugin/publishLocal",
-    "nativelib/publishLocal",
-    "publishLocal"
+    "scalalib/publishLocal",
+    "testRunner/publishLocal",
+    "sbtScalaNative/publishLocal",
+    "testInterface/publishLocal"
   ).mkString(";", ";", "")
 )
 
@@ -36,11 +85,29 @@ addCommandAlias(
   "test-all",
   Seq(
     "sandbox/run",
-    "demoNative/run",
-    "tests/run",
+    "tests/test",
     "tools/test",
-    "benchmarks/run --test",
-    "scripted"
+    "nirparser/test",
+    "sbtScalaNative/scripted",
+    "tools/mimaReportBinaryIssues"
+  ).mkString(";", ";", "")
+)
+
+addCommandAlias(
+  "test-tools",
+  Seq(
+    "tools/test",
+    "nirparser/test",
+    "tools/mimaReportBinaryIssues"
+  ).mkString(";", ";", "")
+)
+
+addCommandAlias(
+  "test-runtime",
+  Seq(
+    "sandbox/run",
+    "tests/test",
+    "sbtScalaNative/scripted"
   ).mkString(";", ";", "")
 )
 
@@ -50,6 +117,9 @@ lazy val publishSnapshot =
 lazy val setUpTestingCompiler = Def.task {
   val nscpluginjar = (Keys.`package` in nscplugin in Compile).value
   val nativelibjar = (Keys.`package` in nativelib in Compile).value
+  val auxlibjar    = (Keys.`package` in auxlib in Compile).value
+  val clibjar      = (Keys.`package` in clib in Compile).value
+  val posixlibjar  = (Keys.`package` in posixlib in Compile).value
   val scalalibjar  = (Keys.`package` in scalalib in Compile).value
   val javalibjar   = (Keys.`package` in javalib in Compile).value
   val testingcompilercp =
@@ -60,7 +130,7 @@ lazy val setUpTestingCompiler = Def.task {
   sys.props("scalanative.testingcompiler.cp") =
     (testingcompilercp :+ testingcompilerjar) map (_.getAbsolutePath) mkString pathSeparator
   sys.props("scalanative.nativeruntime.cp") =
-    Seq(nativelibjar, scalalibjar, javalibjar) mkString pathSeparator
+    Seq(nativelibjar, auxlibjar, clibjar, posixlibjar, scalalibjar, javalibjar) mkString pathSeparator
   sys.props("scalanative.nativelib.dir") =
     ((crossTarget in Compile).value / "nativelib").getAbsolutePath
 }
@@ -72,26 +142,26 @@ lazy val setUpTestingCompiler = Def.task {
 // to be available without a resolver
 // follow: http://www.scala-sbt.org/0.13/docs/Bintray-For-Plugins.html#Linking+your+package+to+the+sbt+organization
 lazy val bintrayPublishSettings = Seq(
-    bintrayRepository := "sbt-plugins",
-    bintrayOrganization := Some("scala-native")
-  ) ++ publishSettings
+  bintrayRepository := "sbt-plugins",
+  bintrayOrganization := Some("scala-native")
+) ++ publishSettings
 
 lazy val mavenPublishSettings = Seq(
-    publishMavenStyle := true,
-    pomIncludeRepository := { x =>
+  publishMavenStyle := true,
+  pomIncludeRepository := { x =>
     false
   },
-    publishTo := {
+  publishTo := {
     val nexus = "https://oss.sonatype.org/"
     if (version.value.trim.endsWith("SNAPSHOT"))
       Some("snapshots" at nexus + "content/repositories/snapshots")
     else
       Some("releases" at nexus + "service/local/staging/deploy/maven2")
   },
-    publishSnapshot := Def.taskDyn {
+  publishSnapshot := Def.taskDyn {
     val travis = Try(sys.env("TRAVIS")).getOrElse("false") == "true"
     val pr = Try(sys.env("TRAVIS_PULL_REQUEST"))
-        .getOrElse("false") != "false"
+      .getOrElse("false") != "false"
     val branch   = Try(sys.env("TRAVIS_BRANCH")).getOrElse("")
     val snapshot = version.value.trim.endsWith("SNAPSHOT")
 
@@ -108,7 +178,7 @@ lazy val mavenPublishSettings = Seq(
         Def.task()
     }
   }.value,
-    credentials ++= {
+  credentials ++= {
     for {
       realm    <- sys.env.get("MAVEN_REALM")
       domain   <- sys.env.get("MAVEN_DOMAIN")
@@ -118,11 +188,15 @@ lazy val mavenPublishSettings = Seq(
       Credentials(realm, domain, user, password)
     }
   }.toSeq
-  ) ++ publishSettings
+) ++ publishSettings
 
 lazy val publishSettings = Seq(
   publishArtifact in Compile := true,
   publishArtifact in Test := false,
+  publishArtifact in (Compile, packageDoc) :=
+    !version.value.contains("SNAPSHOT"),
+  publishArtifact in (Compile, packageSrc) :=
+    !version.value.contains("SNAPSHOT"),
   homepage := Some(url("http://www.scala-native.org")),
   startYear := Some(2015),
   licenses := Seq(
@@ -144,22 +218,27 @@ lazy val publishSettings = Seq(
       <url>https://github.com/scala-native/scala-native/issues</url>
     </issueManagement>
   )
-)
+) ++ nameSettings
 
 lazy val noPublishSettings = Seq(
   publishArtifact := false,
   packagedArtifacts := Map.empty,
   publish := {},
   publishLocal := {},
-  publishSnapshot := {
-    println("no publish")
-  }
-)
+  publishSnapshot := { println("no publish") },
+  skip in publish := true
+) ++ nameSettings
 
 lazy val toolSettings =
   baseSettings ++
     Seq(
-      scalaVersion := toolScalaVersion,
+      crossSbtVersions := List(sbt13Version, sbt10Version),
+      scalaVersion := {
+        (sbtBinaryVersion in pluginCrossBuild).value match {
+          case "0.13" => sbt13ScalaVersion
+          case _      => sbt10ScalaVersion
+        }
+      },
       scalacOptions ++= Seq(
         "-deprecation",
         "-unchecked",
@@ -174,16 +253,16 @@ lazy val libSettings =
   (baseSettings ++ ScalaNativePlugin.projectSettings.tail) ++ Seq(
     scalaVersion := libScalaVersion,
     resolvers := Nil,
-    scalacOptions ++= Seq(
-      "-encoding",
-      "utf8"
-    )
+    scalacOptions ++= Seq("-encoding", "utf8")
   )
 
 lazy val projectSettings =
   ScalaNativePlugin.projectSettings ++ Seq(
     scalaVersion := libScalaVersion,
-    resolvers := Nil
+    resolvers := Nil,
+    scalacOptions ++= Seq("-target:jvm-1.8"),
+    nativeCheck := true,
+    nativeDump := true
   )
 
 lazy val util =
@@ -199,6 +278,23 @@ lazy val nir =
     .settings(mavenPublishSettings)
     .dependsOn(util)
 
+lazy val nirparser =
+  project
+    .in(file("nirparser"))
+    .settings(toolSettings)
+    .settings(noPublishSettings)
+    .settings(
+      libraryDependencies ++= Seq(
+        "com.lihaoyi" %% "fastparse"  % "1.0.0",
+        "com.lihaoyi" %% "scalaparse" % "1.0.0",
+        compilerPlugin(
+          "org.scalamacros" % "paradise" % "2.1.0" cross CrossVersion.full),
+        "org.scalacheck" %% "scalacheck" % "1.13.4" % "test",
+        "org.scalatest"  %% "scalatest"  % "3.0.0"  % "test"
+      )
+    )
+    .dependsOn(nir)
+
 lazy val tools =
   project
     .in(file("tools"))
@@ -206,12 +302,8 @@ lazy val tools =
     .settings(mavenPublishSettings)
     .settings(
       libraryDependencies ++= Seq(
-        "com.lihaoyi"    %% "fastparse"  % "0.4.2",
-        "com.lihaoyi"    %% "scalaparse" % "0.4.2",
         "org.scalacheck" %% "scalacheck" % "1.13.4" % "test",
-        compilerPlugin(
-          "org.scalamacros" % "paradise" % "2.0.1" cross CrossVersion.full),
-        "org.scalatest" %% "scalatest" % "3.0.0" % "test"
+        "org.scalatest"  %% "scalatest"  % "3.0.0"  % "test"
       ),
       fullClasspath in Test := ((fullClasspath in Test) dependsOn setUpTestingCompiler).value,
       publishLocal := publishLocal
@@ -219,7 +311,8 @@ lazy val tools =
         .dependsOn(publishLocal in util)
         .value,
       // Running tests in parallel results in `FileSystemAlreadyExistsException`
-      parallelExecution in Test := false
+      parallelExecution in Test := false,
+      mimaSettings
     )
     .dependsOn(nir, util, testingCompilerInterface % Test)
 
@@ -250,8 +343,9 @@ lazy val sbtPluginSettings =
       sbtPlugin := true,
       scriptedLaunchOpts ++=
         Seq("-Xmx1024M",
-            "-XX:MaxPermSize=256M",
-            "-Dplugin.version=" + version.value)
+            "-XX:MaxMetaspaceSize=256M",
+            "-Dplugin.version=" + version.value) ++
+          ivyPaths.value.ivyHome.map(home => s"-Dsbt.ivy.home=${home}").toSeq
     )
 
 lazy val sbtScalaNative =
@@ -259,28 +353,62 @@ lazy val sbtScalaNative =
     .in(file("sbt-scala-native"))
     .settings(sbtPluginSettings)
     .settings(
-      addSbtPlugin("org.scala-native" % "sbt-crossproject" % "0.1.0"),
-      moduleName := "sbt-scala-native",
+      crossScalaVersions := libCrossScalaVersions,
+      // fixed in https://github.com/sbt/sbt/pull/3397 (for sbt 0.13.17)
+      sbtBinaryVersion in update := (sbtBinaryVersion in pluginCrossBuild).value,
+      addSbtPlugin("org.portable-scala" % "sbt-platform-deps" % "1.0.0"),
       sbtTestDirectory := (baseDirectory in ThisBuild).value / "scripted-tests",
+      // `testInterfaceSerialization` needs to be available from the sbt plugin,
+      // but it's a Scala Native project (and thus 2.11), and the plugin is 2.10 or 2.12.
+      // We simply add the sources to mimic cross-compilation.
+      sources in Compile ++= (sources in Compile in testInterfaceSerialization).value,
       // publish the other projects before running scripted tests.
       scripted := scripted
-        .dependsOn(publishLocal in util,
-                   publishLocal in nir,
-                   publishLocal in tools,
-                   publishLocal in nscplugin,
-                   publishLocal in nativelib,
-                   publishLocal in javalib,
-                   publishLocal in scalalib)
+        .dependsOn(publishLocal in testInterface)
+        .dependsOn(publishLocal in ThisProject)
+        .dependsOn(publishLocal in scalalib)
         .evaluated,
-      publishLocal := publishLocal.dependsOn(publishLocal in tools).value
+      publishLocal := publishLocal
+        .dependsOn(publishLocal in tools, publishLocal in testRunner)
+        .value
     )
-    .dependsOn(tools)
+    .dependsOn(tools, testRunner)
 
 lazy val nativelib =
   project
     .in(file("nativelib"))
     .settings(libSettings)
     .settings(mavenPublishSettings)
+    .settings(
+      libraryDependencies += "org.scala-lang" % "scala-reflect" % scalaVersion.value,
+      publishLocal := publishLocal
+        .dependsOn(publishLocal in nscplugin)
+        .value
+    )
+
+lazy val clib =
+  project
+    .in(file("clib"))
+    .settings(libSettings)
+    .settings(mavenPublishSettings)
+    .settings(
+      publishLocal := publishLocal
+        .dependsOn(publishLocal in nativelib)
+        .value
+    )
+    .dependsOn(nativelib)
+
+lazy val posixlib =
+  project
+    .in(file("posixlib"))
+    .settings(libSettings)
+    .settings(mavenPublishSettings)
+    .settings(
+      publishLocal := publishLocal
+        .dependsOn(publishLocal in clib)
+        .value
+    )
+    .dependsOn(clib)
 
 lazy val javalib =
   project
@@ -299,12 +427,35 @@ lazy val javalib =
         val classDir  = (classDirectory in Compile).value.getAbsolutePath()
         val separator = sys.props("path.separator")
         "-javabootclasspath" +: s"$classDir$separator$javaBootClasspath" +: previous
-      }
+      },
+      // Don't include classfiles for javalib in the packaged jar.
+      mappings in packageBin in Compile := {
+        val previous = (mappings in packageBin in Compile).value
+        previous.filter {
+          case (file, path) =>
+            !path.endsWith(".class")
+        }
+      },
+      publishLocal := publishLocal
+        .dependsOn(publishLocal in nativelib, publishLocal in posixlib)
+        .value
     )
-    .dependsOn(nativelib)
+    .dependsOn(nativelib, posixlib)
 
 lazy val assembleScalaLibrary = taskKey[Unit](
   "Checks out scala standard library from submodules/scala and then applies overrides.")
+
+lazy val auxlib =
+  project
+    .in(file("auxlib"))
+    .settings(libSettings)
+    .settings(mavenPublishSettings)
+    .settings(
+      publishLocal := publishLocal
+        .dependsOn(publishLocal in javalib)
+        .value
+    )
+    .dependsOn(nativelib)
 
 lazy val scalalib =
   project
@@ -317,9 +468,13 @@ lazy val scalalib =
 
         val s      = streams.value
         val trgDir = target.value / "scalaSources" / scalaVersion.value
+        val scalaRepo = sys.env
+          .get("SCALANATIVE_SCALAREPO")
+          .getOrElse("https://github.com/scala/scala.git")
 
         if (!trgDir.exists) {
-          s.log.info(s"Fetching Scala source version ${scalaVersion.value}")
+          s.log.info(
+            s"Fetching Scala source version ${scalaVersion.value} from $scalaRepo")
 
           // Make parent dirs and stuff
           IO.createDirectory(trgDir)
@@ -327,7 +482,7 @@ lazy val scalalib =
           // Clone scala source code
           new CloneCommand()
             .setDirectory(trgDir)
-            .setURI("https://github.com/scala/scala.git")
+            .setURI(scalaRepo)
             .call()
         }
 
@@ -354,25 +509,19 @@ lazy val scalalib =
       compile in Compile := (compile in Compile)
         .dependsOn(assembleScalaLibrary)
         .value,
-      publishLocal := publishLocal.dependsOn(assembleScalaLibrary).value
+      // Don't include classfiles for scalalib in the packaged jar.
+      mappings in packageBin in Compile := {
+        val previous = (mappings in packageBin in Compile).value
+        previous.filter {
+          case (file, path) =>
+            !path.endsWith(".class")
+        }
+      },
+      publishLocal := publishLocal
+        .dependsOn(assembleScalaLibrary, publishLocal in auxlib)
+        .value
     )
-    .dependsOn(nativelib, javalib)
-
-lazy val demoJVM =
-  project
-    .in(file("demo/jvm"))
-    .settings(noPublishSettings)
-    .settings(
-      fork in run := true,
-      javaOptions in run ++= Seq("-Xms64m", "-Xmx64m")
-    )
-
-lazy val demoNative =
-  project
-    .in(file("demo/native"))
-    .settings(projectSettings)
-    .settings(noPublishSettings)
-    .enablePlugins(ScalaNativePlugin)
+    .dependsOn(auxlib, nativelib, javalib)
 
 lazy val tests =
   project
@@ -382,29 +531,19 @@ lazy val tests =
     .settings(
       // nativeOptimizerReporter := OptimizerReporter.toDirectory(
       //   crossTarget.value),
-      sourceGenerators in Compile += Def.task {
-        val dir = (scalaSource in Compile).value
-        val suites = (dir ** "*Suite.scala").get
-          .flatMap(IO.relativizeFile(dir, _))
-          .map(file => packageNameFromPath(file.toPath))
-          .filter(_ != "tests.Suite")
-          .mkString("Seq(", ", ", ")")
-        val file = (sourceManaged in Compile).value / "tests" / "Discover.scala"
-        IO.write(file,
-                 s"""
-          package tests
-          object Discover {
-            val suites: Seq[tests.Suite] = $suites
-          }
-        """)
-        Seq(file)
-      }.taskValue,
-      envVars in run ++= Map(
+      // nativeLinkerReporter := LinkerReporter.toFile(
+      //   target.value / "out.dot"),
+      libraryDependencies += "org.scala-native" %%% "test-interface" % nativeVersion,
+      testFrameworks += new TestFramework("tests.NativeFramework"),
+      envVars in (Test, test) ++= Map(
         "USER"                           -> "scala-native",
         "HOME"                           -> baseDirectory.value.getAbsolutePath,
         "SCALA_NATIVE_ENV_WITH_EQUALS"   -> "1+1=2",
-        "SCALA_NATIVE_ENV_WITHOUT_VALUE" -> ""
-      )
+        "SCALA_NATIVE_ENV_WITHOUT_VALUE" -> "",
+        "SCALA_NATIVE_ENV_WITH_UNICODE"  -> 0x2192.toChar.toString,
+        "SCALA_NATIVE_USER_DIR"          -> System.getProperty("user.dir")
+      ),
+      nativeLinkStubs := true
     )
     .enablePlugins(ScalaNativePlugin)
 
@@ -415,36 +554,8 @@ lazy val sandbox =
     .settings(noPublishSettings)
     .settings(
       // nativeOptimizerReporter := OptimizerReporter.toDirectory(
-      //   crossTarget.value)
-    )
-    .enablePlugins(ScalaNativePlugin)
-
-lazy val benchmarks =
-  project
-    .in(file("benchmarks"))
-    .settings(projectSettings)
-    .settings(noPublishSettings)
-    .settings(
-      nativeMode := "release",
-      sourceGenerators in Compile += Def.task {
-        val dir = (scalaSource in Compile).value
-        val benchmarks = (dir ** "*Benchmark.scala").get
-          .flatMap(IO.relativizeFile(dir, _))
-          .map(file => packageNameFromPath(file.toPath))
-          .filter(_ != "benchmarks.Benchmark")
-          .mkString("Seq(new ", ", new ", ")")
-        val file = (sourceManaged in Compile).value / "benchmarks" / "Discover.scala"
-        IO.write(
-          file,
-          s"""
-          package benchmarks
-          object Discover {
-            val discovered: Seq[benchmarks.Benchmark[_]] = $benchmarks
-          }
-        """
-        )
-        Seq(file)
-      }.taskValue
+      //   crossTarget.value),
+      scalaVersion := libScalaVersion
     )
     .enablePlugins(ScalaNativePlugin)
 
@@ -452,6 +563,7 @@ lazy val testingCompilerInterface =
   project
     .in(file("testing-compiler-interface"))
     .settings(libSettings)
+    .settings(noPublishSettings)
     .settings(
       crossPaths := false,
       crossVersion := CrossVersion.Disabled,
@@ -470,3 +582,57 @@ lazy val testingCompiler =
       )
     )
     .dependsOn(testingCompilerInterface, nativelib)
+
+lazy val testInterface =
+  project
+    .settings(toolSettings)
+    .settings(scalaVersion := libScalaVersion)
+    .settings(mavenPublishSettings)
+    .in(file("test-interface"))
+    .settings(
+      libraryDependencies += "org.scala-sbt"    % "test-interface"   % "1.0",
+      libraryDependencies -= "org.scala-native" %%% "test-interface" % version.value % Test,
+      publishLocal := publishLocal
+        .dependsOn(publishLocal in testInterfaceSerialization)
+        .value
+    )
+    .enablePlugins(ScalaNativePlugin)
+    .dependsOn(testInterfaceSerialization)
+
+lazy val testInterfaceSerialization =
+  project
+    .settings(toolSettings)
+    .settings(scalaVersion := libScalaVersion)
+    .settings(mavenPublishSettings)
+    .in(file("test-interface-serialization"))
+    .settings(
+      libraryDependencies -= "org.scala-native" %%% "test-interface" % version.value % Test,
+      publishLocal := publishLocal
+        .dependsOn(publishLocal in testInterfaceSbtDefs)
+        .value
+    )
+    .dependsOn(testInterfaceSbtDefs)
+    .enablePlugins(ScalaNativePlugin)
+
+lazy val testInterfaceSbtDefs =
+  project
+    .settings(toolSettings)
+    .settings(scalaVersion := libScalaVersion)
+    .settings(mavenPublishSettings)
+    .in(file("test-interface-sbt-defs"))
+    .settings(
+      libraryDependencies -= "org.scala-native" %%% "test-interface" % version.value % Test
+    )
+    .enablePlugins(ScalaNativePlugin)
+
+lazy val testRunner =
+  project
+    .settings(toolSettings)
+    .settings(mavenPublishSettings)
+    .in(file("test-runner"))
+    .settings(
+      crossScalaVersions := Seq(sbt13ScalaVersion, sbt10ScalaVersion),
+      libraryDependencies += "org.scala-sbt" % "test-interface" % "1.0",
+      sources in Compile ++= (sources in testInterfaceSerialization in Compile).value
+    )
+    .dependsOn(tools)
